--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,9 @@ padding:1rem;
 padding-top:0;
 
 }
+p{
+  color:white;
+}
 .navbar
 {
   display: flex;
@@ -35,6 +38,12 @@ padding-top:0;
   background-color: #17a2b8;
 
 }
+.nav-link>img
+{
+  height:28px;
+  object-fit: cover;
+  margin-right:0.1rem;
+}
 .navbar-brand
 {
   width:80%;
@@ -49,8 +58,13 @@ code {
 .table
 {
   color:white;
-  /* border-collapse: separate; */
-  border-spacing: 0.5em;
+  border-collapse: separate;
+  border-spacing:0 1rem;
+  border:none;
+}
+.table,tr,th,td
+{
+  border:none;
 }
 
 .mt-3
@@ -60,13 +74,20 @@ code {
 }
 .table>tbody>tr
 {
-  display: border-box;
+  box-sizing: border-box;
   background-color: #2e3241;
-  padding: 0.2rem;
+  padding: 1rem;
   margin:0.5rem;
-  border-radius: 1rem;
+  border-radius:#2e3241 solid 15px;
 }
 .table>tbody>td
 {
   text-align: center;
 }
+/* tr:first-child td:first-child { border-top-left-radius: 10px; }
+tr:first-child td:last-child { border-top-right-radius: 10px; }
+tr:last-child td:first-child { border-bottom-left-radius: 10px; }
+tr:last-child td:last-child { border-bottom-right-radius: 10px; } */
+tr>td:first-child { border-top-left-radius: 10px; border-bottom-left-radius:10px; }
+tr>td:last-child{border-top-right-radius:10px; border-bottom-right-radius:10px;}
+/* tr td:first-child { border-left-style: solid; } */
